[fix] Fix measurement field alignment on small screen

--- a/src/app/trip/operation/operation.form.scss
+++ b/src/app/trip/operation/operation.form.scss
@@ -30,12 +30,6 @@ form {
         }
       }
     }
-
-    mat-boolean-field {
-      .mat-boolean-field-button {
-        margin-top: -12px;
-      }
-    }
   }
 }
 
