--- a/src/theme/_theme.scss
+++ b/src/theme/_theme.scss
@@ -49,7 +49,7 @@ mat-form-field {
       flex: 0 1 var(--flex-basis);
       max-width: calc(min(var(--flex-basis), 150px));
       white-space: normal;
-      margin: 4px 0;
+      padding: 0 2px;
       height: 40px;
     }
   }
